你这个判断完全正确，日志里已经证明是 MCP 检索协议层的问题。我按优先级修了两个点：
1. **修 env 大小写误杀**
   [OpenSearchMcpSearchService.java](D:/IdeaProjects/Langchain4j-AI/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/search/OpenSearchMcpSearchService.java:678)

   `env` 不再统一 lower 成 `dev`，现在会生成兼容条件，类似：

   ```json
   {
     "bool": {
       "should": [
         { "term": { "env": "DEV" } },
         { "term": { "env": "dev" } }
       ],
       "minimum_should_match": 1
     }
   }
   ```

   这样索引里是 `DEV` 时不会再被过滤掉。

2. **清理 query 里的布尔操作词**
   [SqlMetadataSearchService.java](D:/IdeaProjects/Langchain4j-AI/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/sql/SqlMetadataSearchService.java:326)

   `融资负债 OR 维持担保比例` 进入 retrieval 前会变成：

   ```text
   融资负债 维持担保比例
   ```

   然后再追加：

   ```text
   marg fin financing liab liability debt ast liab mars scr ...
   ```

   不会再把 `or` 当普通检索词塞进 `multi_match`。

验证已通过：

```bash
mvn -pl chatchat-mcp-server -am -DskipTests compile
```

重启 MCP 后，下一次日志里你应该看到 `sql_metadata_search` 的 DSL 不再是 `env:"dev"` 单 term，并且 `retrievalQuery` 里不会再有 `OR/or`。这次大概率就会返回 `dwd_var_marg_mars_scr_d_f`、`ads_ids_marg_ast_liab_d_i` 这类候选表。